--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pizza-kiosk",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://krishna-saparia.github.io/Pizza-kiosk",
+  "homepage": "http://krishna-saparia.github.io/pizza-kiosk",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "mobx": "^6.3.0",
     "mobx-react-lite": "^3.2.0",
+    "npm": "^7.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -22,12 +23,12 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
